# todo_trpc_rspc

./: docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
backend_rust/: .env  Cargo.toml  package.json
backend_rust/prisma/: schema.prisma
backend_rust/src/: api.rs  main.rs  router.rs
backend_rust/src/clients/: mod.rs  prisma.rs
frontend/: package.json
frontend/src/: App.tsx  main.tsx
frontend/src/features/post_create_dialog/: index.tsx
frontend/src/features/post_list/: PostList.tsx  PostListItem.tsx
frontend/src/pages/: post_list.tsx
frontend/src/providers/BackendRust/: index.tsx  types.ts
frontend/src/providers/Routes/: index.tsx
frontend/src/providers/Theme/: index.tsx  theme.ts
