[package]
name = "todo_backend_rust"
version = "0.0.0"
edition = "2021"
default-run = "todo_backend_rust"

[dependencies]
axum = "0.5.16"
dotenv = "0.15.0"
rspc = { version = "0.1.2", features = ["axum"] }
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.2", features = ["rspc", "migrations"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.2", features = ["rspc", "migrations"] }
